2004-03-15  Bharat Mediratta  <bharat@menalto.com> 1.4.3-cvs-b118

	* util.php: fixed a regression in getStyleSheetLink where we were not
	  ignoring domain specific stylesheets.

2004-03-15  Jay Rossiter <cryptographite@users.sf.net> 1.4.3-cvs-b117

	* Change: Turn album sort routines into actual functions instead of 
	  building them as strings and using create_function()

2004-03-15 Jens Tkotz <jens@peino.de> 1.4.3-cvs-b116

	* Bugfix: getBrowserlanguage() didnt work.

2004-03-15  Bharat Mediratta  <bharat@menalto.com> 1.4.3-cvs-b115

	* Update plugin pointer in drawApplet to point to the current version
	  of the J2SE (1.4.2)

2004-03-15  Bharat Mediratta  <bharat@menalto.com> 1.4.3-cvs-b114

	* Fixed URLs in the "Add Other" upload section to use the
	  gallery.sourceforge.net upload method instead of gallery.menalto.com

2004-03-13  Jay Rossiter <cryptographite@users.sf.net> 1.4.3-cvs-b113

	* Bug 906018: Don't create a .sized. image if the requested
	  target is larger than the original image.

	* Bug 911617: When resizing images, if the target size is
	  larger than the original, and a .sized. exists, remove it.

2004-03-07  Bharat Mediratta  <bharat@menalto.com> 1.4.3-cvs-b112

 	* Recommit of ImageTools.jar (same as 1.4.2-cvs-b73, which apparently
	  was the wrong version of the jar).  Namely: no code changes, but the
	  code is now compiled under jdk1.1 for broader compatibility
	  (specifically it now works with the MS Java VM that comes with
	  Windows XP)

2004-03-05  Jay Rossiter <cryptographite@users.sf.net> 1.4.3-cvs-b111

	* Bug 847194: Allow "0000" as an itemCaptureDate
	  Clarified allows date ranges (1970-2069), and details for
	  two digit date remapping

2004-03-05  Alan Harder  <alan.harder@sun.com> 1.4.3-cvs-b110

	* Bugfix 909453: updated image frame html to resize frame with its
	  content allowing image frames to be used with fit-to-window.

2004-03-05  Alan Harder  <alan.harder@sun.com> 1.4.3-cvs-b109
