@@ -59,6 +59,7 @@
 ../layout/navigator.inc
 ../layout/navphoto.inc
 ../lib/Form.php
+../lib/lang.php
 ../login.php
 ../manage_users.php
 ../modify_user.php
