@@ -1,3 +1,8 @@
+2004-03-16 Jens Tkotz <jens@peino.de> 1.4.3-cvs-b119
+
+	* Change: - Added posibility to translate manual entered custom Fields. (translateableFields)
+		  - Moved function automaticFieldsList() into lib/lang.php
+
 2004-03-15  Bharat Mediratta  <bharat@menalto.com> 1.4.3-cvs-b118
 
 	* util.php: fixed a regression in getStyleSheetLink where we were not
